--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 DeepZoomImageConverter Revision History
 Author: Don Liang (dl2k84@gmail.com)
 
+v0.2, 05/10/2011
+- Support conversion and output of image collections by accepting a folder
+path or accepting an ambiguous size of image paths in the program args.
+
 v0.1, 22/09/2011
 Initial working release.
 See TODO file for list of functions yet to be implemented.
